--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,3 +1,7 @@
+html  {
+  scroll-behavior: smooth;
+}
+
 body  {
   font-family: manrope;
   margin: 0%;
@@ -69,11 +73,67 @@ a {
     border-radius: 0%;
   }
 }
+/* popup contact menu */
+#contact  {
+  display: none;
+  position: fixed;
+  left: 80%;
+  top: 65vh;
+  width: 15vw;
+  background-color: rgba(164, 225, 243, 0.7);
+  color:rgba(82, 145, 184, .7);
+  border-radius: 3%;
+  z-index: 100;
+}
+.form-btn {
+  color: rgba(82, 145, 184, .7);
+  background: rgba(164, 225, 243, 0.7);
+  border: 1px solid rgba(82, 145, 184, .7); 
+}
+
+.form-btn:hover {
+  color: white;
+  background: rgba(82, 145, 184, .7);
+}
+
+input[type="text"] {
+  width: 100%;
+  border: 1px solid rgba(164, 225, 243, 0.7);
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+input[type="text"]:hover {
+  border: 3px solid rgba(82, 145, 184, .7);
+}
+
+form {
+  text-align: left;
+}
+
+/* sticky contact button */
+#contact-btn  {
+  position: fixed;
+  left: 80%;
+  top: 85vh;
+  z-index: 100;
+  width: 15vw;
+  height: 3vw;
+  background-color: rgba(82, 145, 184, .3);
+  color: rgba(82, 145, 184, .7);
+  cursor: pointer;
+  border: 2px solid rgba(164, 225, 243, 0.7);
+}
+#contact-btn:hover  {
+  background-color: rgba(82, 145, 184, .7);
+  color: white;
+}
 
 /* home */
+#home {
+  height: 100vh;
+}
 .video {
   position: fixed;
-  height: 500px;
   width: 100%;
   overflow: hidden;
   top: 0;
@@ -97,6 +157,73 @@ a {
 @keyframes move_video_text {
   from {left: -100vw;}
   to {left: 0vw;}
+}
+
+/* skills slideshow */
+#slideshow  {
+  position: relative;
+  padding-top: 100px;
+}
+
+/* creates a 500px container for slides and centers it */
+.slideshow-container  {
+  margin: auto;
+  width: 500px;
+  height: 500px;
+  margin-bottom: 100px;
+}
+
+/* slide default is hidden */
+.slides {
+  display: none;
+}
+
+/* sizing/styling/positioning of images */
+.slides img  {
+  width: 500px;
+  height: 500px;
+  opacity: .8;
+  position: absolute;
+  border-radius: 20px;
+  border: 3px solid rgba(164, 225, 243, 0.7);
+  box-shadow: -10px 10px 10px 10px rgba(82, 145, 184, .3);
+  filter: saturate(50%);
+}
+
+/* removes image filter on hover */
+.slides img:hover {
+  filter: none;
+}
+
+/* control button styling */
+.prev, .next {
+  background-color: rgba(0, 0, 0, 0);
+  color: rgba(82, 145, 184, .7);
+  border: none;
+  font-size: 2em;
+  position: relative;
+  top: 50%;
+  cursor: pointer;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-left: 10px;
+}
+.prev:hover, .next:hover {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+.next {
+  left: 380px;
+}
+
+/* caption positioning/styling */
+.caption  {
+  position: absolute;
+  bottom: 0px;
+  height: 40px;
+  width: 500px;
+  color: white;
+  text-align: center;
+  background: rgba(82, 145, 184, .7);
 }
 
 /* about */
@@ -144,37 +271,8 @@ a {
   left: 50%;
   transform: translate(-50%, -50%);
 }
-.col_form {
-  float: left;
-  width: 50%;
-  color: rgba(82, 145, 184, .7);
-  padding-left: 5px;
-  height: 500px;
-  position: relative;
-  background-color: #fff;
-}
 
-/* contact */
 
-input[type="text"] {
-  width: 100%;
-  border: 1px solid rgba(164, 225, 243, 0.7);
-}
-input[type="text"]:hover  {
-  border: 1px solid rgba(82, 145, 184, .7);
-}
-input[type="submit"]  {
-  color: rgba(82, 145, 184, .7);
-  background: rgba(164, 225, 243, 0.7);
-  border: 1px solid rgba(82, 145, 184, .7);
-}
-input[type="submit"]:hover  {
-  color: white;
-  background: rgba(82, 145, 184, .7);
-}
-form {
-  text-align: left;
-}
 
 /* footer */
 .footer-bar {
